--- a/views/campgrounds/new.ejs
+++ b/views/campgrounds/new.ejs
@@ -3,26 +3,41 @@
     <div class="row">
         <h1 class="text-center" >New Campground</h1>
         <div class="col-6 offset-3">
-            <form action="/campgrounds" method="post">
+            <form action="/campgrounds" method="post" novalidate class="validated-form" >
                 <div class="mb-3">
                     <label class="form-label" for="title">Title: </label>
-                    <input class="form-control" type="text" id="title" name="campground[title]">
+                    <input class="form-control" type="text" id="title" name="campground[title]"  required>
+                    <div class="valid-feedback">
+                        Looks good!
+                    </div>
                 </div>
                 <div class="mb-3">
                     <label class="form-label" for="location">Location: </label>
-                    <input class="form-control" type="text" id="location" name="campground[location]">
+                    <input class="form-control" type="text" id="location" name="campground[location]"  required>
+                    <div class="valid-feedback">
+                        Looks good!
+                    </div>
                 </div>
                 <div class="mb-3">
                     <label class="form-label" for="image">Image URL: </label>
-                    <input class="form-control" type="text" id="image" name="campground[image]">
+                    <input class="form-control" type="text" id="image" name="campground[image]"  required>
+                    <div class="valid-feedback">
+                        Looks good!
+                    </div>
                 </div>
                 <div class="input-group mb-3">
                     <span class="input-group-text" id="basic-addon1">$</span>
-                    <input name="campground[price]" value="0.00" type="text" class="form-control" placeholder="price" aria-label="Username" aria-describedby="basic-addon1">
+                    <input name="campground[price]" value="0.00" type="text" class="form-control" required placeholder="price" aria-label="Username" aria-describedby="basic-addon1" >
+                    <div class="valid-feedback">
+                        Looks good!
+                    </div>
                 </div>
                 <div class="mb-3">
                     <label class="form-label" for="description">Description: </label>
-                    <textarea class="form-control" name="campground[description]" id="description" cols="30" rows="5"></textarea>
+                    <textarea class="form-control" name="campground[description]" id="description" cols="30" rows="5" required ></textarea>
+                    <div class="valid-feedback">
+                        Looks good!
+                    </div>
                 </div>
                 <div class="mb-3">
                     <button class="btn btn-success">Add Campground</button>
