--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -2,8 +2,8 @@
 
 
 <div class="row">
-    <div class="col-6 offset-3 ">
-        <div class="card mt-3" >
+    <div class="col-6 mt-3">
+        <div class="card " >
             <img src="<%=campground.image %>" class="card-img-top" alt="campground picture">
             <div class="card-body">
               <h5 class="card-title"><%=campground.title %></h5>
@@ -20,6 +20,34 @@
               </form>
             </div>
         </div>
+        
+           
+    </div>
+    <div class="col-6 mt-3">
+        <h2>Leave a review</h2>
+            <form action="/campgrounds/<%= campground._id %>/review" method="post" class="mb-3 validated-form" novalidate >
+                <div class="mb-3 ">
+                    <label for="rating">Rating</label>
+                    <input type="range" min="1" max="5" id="rating" name="review[rating]" class="form-range" >
+                </div>
+                <div class="mb-3 ">
+                    <label class="form-label" for="body">Review</label>
+                    <textarea class="form-control " name="review[body]" id="body" cols="30" rows="5" required></textarea>
+                    <div class="valid-feedback">
+                        Looks good!
+                    </div>
+                    <button class="btn btn-success mt-3" >Submit</button>
+                </div>
+            </form>
+        
+            <% for (review of campground.reviews){ %>
+                <div class="card mb-3">    
+                    <div class="card-body">
+                        <p>Rating: <%= review.rating %></p>
+                        <p>Review: <%= review.body %></p>    
+                    </div>
+                </div> 
+            <% } %>
     </div>
 </div>
 
