fix success flash

--- a/views/partials/flash.ejs
+++ b/views/partials/flash.ejs
@@ -1,8 +1,8 @@
 
-<% if(success && success.legnth){ %>
+<% if(success && success.length){ %>
     <div class="alert alert-success alert-dismissible fade show" role="alert">
         <strong>Success!</strong>
-        <%= success %>
+            <%= success %>
         <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
     </div>
 <% } %>
