--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -12,7 +12,22 @@
           <li class="nav-item">
             <a class="nav-link" href="/campgrounds/new">New Campground</a>
           </li>
+          
         </ul>
+        <div class="navbar-nav ms-auto">
+          <% if(!currentUser){ %>
+            <li class="nav-item">
+              <a class="nav-link" href="/login">Login</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="/register">Register</a>
+            </li>
+          <% }else{ %>
+            <li class="nav-item">
+              <a class="nav-link" href="/logout">Logout</a>
+            </li>
+          <% } %>
+        </div>
       </div>
     </div>
   </nav>
