--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -5,7 +5,25 @@
 <div class="row">
     <div class="col-6 mt-3">
         <div class="card " >
-            <img src="<%=campground.image %>" class="card-img-top" alt="campground picture">
+            <div id="carouselExample" class="carousel slide">
+                <div class="carousel-inner">
+                    <% campground.images.forEach((img, i)=>{ %>
+                        <div class="carousel-item <%= i === 0? "active" : "" %>">
+                            <img src="<%=img.url %>" class="d-block w-100" alt="campground picture">
+                        </div>
+                    <% }) %>
+                </div>
+                <% if(campground.images.length > 1 ){ %>
+                    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Previous</span>
+                    </button>
+                    <button class="carousel-control-next" type="button" data-bs-target="#carouselExample" data-bs-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Next</span>
+                    </button>
+                <% } %>
+            </div>
             <div class="card-body">
               <h5 class="card-title"><%=campground.title %></h5>
               <p class="card-text"><%= campground.description %></p>
