--- a/views/campgrounds/edit.ejs
+++ b/views/campgrounds/edit.ejs
@@ -3,7 +3,7 @@
     <div class="row">
         <h1 class="text-center" >Edit</h1>
         <div class="col-6 offset-3">
-            <form action="/campgrounds/<%= campground._id %>?_method=put" method="post" novalidate class="validated-form">
+            <form action="/campgrounds/<%= campground._id %>?_method=put" method="post" novalidate class="validated-form" enctype="multipart/form-data" >
                 <div class="mb-3">
                     <label class="form-label" for="title">Title </label>
                     <input value="<%= campground.title%>" class="form-control" type="text" id="title" name="campground[title]" required>
@@ -19,12 +19,19 @@
                     </div>
                 </div>
                 <div class="mb-3">
-                    <label class="form-label" for="image">Image URL: </label>
-                    <input value="<%= campground.image%>" class="form-control" type="text" id="image" name="campground[image]" required>
+                    <label for="image" class="form-label">Add more images</label>
+                    <input class="form-control" type="file" id="image" name="image" multiple>
                     <div class="valid-feedback">
                         Looks good!
                     </div>
                 </div>
+                <mb-3>
+                    <% campground.images.forEach(function(img, i){ %>
+                        <img src="<%= img.url %>"  class="img-thumbnail" alt="">
+                        <input type="checkbox" id="image-<%=i %>" value="<%= img.filename %>" name="imageDelete[]"  >
+                        <label for="image-<%=i %>">Delete</label>
+                    <% }) %>
+                </mb-3>
                 <div class="input-group mb-3">
                     <span class="input-group-text" id="basic-addon1">$</span>
                     <input name="campground[price]" value="<%=campground.price %>" type="text" class="form-control" placeholder="price" aria-label="Username" aria-describedby="basic-addon1" required>
