--- a/views/campgrounds/new.ejs
+++ b/views/campgrounds/new.ejs
@@ -18,14 +18,10 @@
                         Looks good!
                     </div>
                 </div>
-                <input type="file" name="image" id="" multiple>
-                <!-- <div class="mb-3">
-                    <label class="form-label" for="image">Image URL: </label>
-                    <input class="form-control" type="text" id="image" name="campground[image]"  required>
-                    <div class="valid-feedback">
-                        Looks good!
-                    </div>
-                </div> -->
+                <div class="mb-3">
+                    <label for="image" class="form-label">Images upload</label>
+                    <input class="form-control" type="file" id="image" name="image" multiple>
+                </div>
                 <div class="input-group mb-3">
                     <span class="input-group-text" id="basic-addon1">$</span>
                     <input name="campground[price]" value="0.00" type="text" class="form-control" required placeholder="price" aria-label="Username" aria-describedby="basic-addon1" >
