--- a/views/campgrounds/index.ejs
+++ b/views/campgrounds/index.ejs
@@ -4,7 +4,11 @@
             <div class="card" md-3 >
                 <div class="row">
                     <div class="col-md-4">
-                        <img class="img-fluid" src="<%=campground.images[0].url %>" alt="">
+                        <% if(campground.images.length){ %>
+                            <img class="img-fluid" src="<%=campground.images[0].url %>" alt="">
+                        <% }else{ %>
+                            <img class="img-fluid" src="https://res.cloudinary.com/dk2dphyqw/image/upload/v1687335762/YelpCamp/gosyerxa4ier307m0u85.jpg" alt="">
+                        <% } %>
                     </div>
                     <div class="col-md-8">
                         <div class="card-body">
