--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -4,8 +4,9 @@
 
 <div class="row">
     <div class="col-6 mt-3">
+        
         <div class="card " >
-            <div id="carouselExample" class="carousel slide">
+            <div id="carouselExample" class="carousel slide">    
                 <div class="carousel-inner">
                     <% campground.images.forEach((img, i)=>{ %>
                         <div class="carousel-item <%= i === 0? "active" : "" %>">
@@ -45,6 +46,7 @@
         </div>
     </div>
     <div class="col-6 mt-3">
+        <div id='map' style='width: 400px; height: 300px;'></div>
             <% if(currentUser){ %>
                 <h2>Leave a review</h2>
                 <h6 id="status" class="d-none my-0 text-danger">Please Select Rating</h6>
@@ -91,6 +93,10 @@
     </div>
 </div>
 
-
+<script>
+    const mapToken = '<%-process.env.MAPBOX_TOKEN %>' ;
+    const campground = <%- JSON.stringify(campground) %>
+</script>
+<script src="/javascript/showPageMap.js"></script>
 
    
