--- a/views/campgrounds/index.ejs
+++ b/views/campgrounds/index.ejs
@@ -1,7 +1,7 @@
     <% layout("layouts/Boilerplate") %>
-    
+        <div id="map" style="width: 100%; height:500px" ></div>
         <% for(let campground of campgrounds){ %>
-            <div class="card" md-3 >
+            <div class="card" mb-3 >
                 <div class="row">
                     <div class="col-md-4">
                         <% if(campground.images.length){ %>
@@ -24,3 +24,9 @@
             </div>
         <% } %>
     
+    <script>
+        const mapToken = "<%-process.env.MAPBOX_TOKEN %>"
+        const campground = {features: <%- JSON.stringify(campgrounds) %> }
+    </script>
+    
+    <script src="/javascript/clusterMap.js"></script>
