--- a/views/campgrounds/index.ejs
+++ b/views/campgrounds/index.ejs
@@ -1,4 +1,4 @@
-    <% layout("layouts/Boilerplate") %>
+    <% layout("layouts/boilerplate") %>
         <div id="cluster-map" ></div>
         <% for(let campground of campgrounds){ %>
             <div class="card mb-3"  >
