--- a/views/campgrounds/index.ejs
+++ b/views/campgrounds/index.ejs
@@ -1,5 +1,8 @@
     <% layout("layouts/boilerplate") %>
         <div id="cluster-map" ></div>
+        <div>
+            <h2>All Campgrounds</h2>
+        </div>
         <% for(let campground of campgrounds){ %>
             <div class="card mb-3"  >
                 <div class="row">
